# winapi

./: .gitignore  CMakeLists.txt
MessageBox/: CMakeLists.txt
MessageBox/src/: Main.cpp
SimpleWindow/: CMakeLists.txt
SimpleWindow/src/: Main.cpp
